# ankicommunity-sync-server

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yml  CHANGES.txt  Dockerfile  INSTALL.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  ankiserverctl.py  ankiserverctl.sh  ankisyncctl.py  ankisyncd.conf  ankisyncd.sh  example.ini  libanki.patch  logging.conf  patch_libanki.sh  pyproject.toml  setup.py  supervisor-anki-server.conf  t.py  test.html
.github/workflows/: docker.yml  poetry-export.yml  release.yml  requirements.yml  test.yml
AnkiServer/: __init__.py  collection.py  deck.py  find.py  importer.py  logpatch.py  sync.py  sync_app.py  threading.py  utils.py
AnkiServer/apps/: rest_app.py  sync_app.py  sync_old.py
addon/: __init__.py  config.json
ankisyncd/: __init__.py  __main__.py  collection.py  config.py  full_sync.py  media.py  sessions.py  sync_app.py  thread.py  users.py
config/: .env.example
docs/: mkdocs.yml  nginx.conf
scripts/: jupyter.sh  lock.sh  poetry-export.sh  poetry-lock.sh  poetry-update.sh  prepare-release.sh  print-env.sh  printenv.sh  release-branch.sh  release-tags.sh  release.sh
src/: __init__.py  ankisyncctl.py  requirements-dev.txt  requirements.txt  setup.py  sync_app.py  thread.py
tests/: collection_test_base.py  sync_app_functional_test_base.py  test_collection.py  test_collection_wrappers.py  test_full_sync.py  test_importer.py  test_media.py  test_rest_app.py  test_sessions.py  test_sync_app.py  test_users.py  test_web_hostkey.py  test_web_media.py
utils/: migrate_user_tables.py
(+42 files in other folders)
