[tool.poetry]
name = "anki-sync-server"
version = "0.1.0"
description = "Self-hosted Anki Sync Server."
authors = ["Vikash Kothary <kothary.vikash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
